Single Page title

--- a/html/singlepage.html
+++ b/html/singlepage.html
@@ -12,7 +12,7 @@
       referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../styles/style.css" />
     <link href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css" rel="stylesheet" />
-    <title>Search Page</title>
+    <title>Single Page</title>
 
     <style type="text/tailwindcss">
       @layer base {
